2019-05-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 44271: Src/loop.c, Test/A01grammar.ztst: until with positive
	and while with negative status propagated breaks too far after a
	return, causing code in enclosing scope not to run.

2019-04-26  dana  <dana@dana.is>

	* 44234: Completion/Unix/Command/_ssh: Update for OpenSSH 8.0

	* 44249: Completion/Unix/Command/_mv,
	Completion/Unix/Command/_rmdir,
	Completion/Unix/Type/_directories: Handle zsh/files built-ins
	in _mv and _rmdir

	* 44250: Completion/Unix/Command/_chmod,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_ln,
	Completion/Unix/Command/_mkdir, Completion/Unix/Command/_mv,
	Completion/Unix/Command/_rm, Completion/Unix/Command/_rmdir:
	Fix use of -A and -S options to _arguments

	* 44251: Completion/Unix/Command/_chmod,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_mkdir,
	Completion/Unix/Command/_mv, Completion/Unix/Command/_rmdir:
	Fix various wording issues

2019-04-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 44248: Src/init.c: Mark SIGQUIT as ignored if ignored at
	shell start, so we don't enable it after a fork.

2019-04-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 44254: Src/compat.c: make quite sure we've reached "/"
	in zgetdir(), else report an error.

2019-04-22  Matthew Martin  <phy1729@gmail.com>

	* unposted: Completion/Base/Utility/_pick_variant: Use
	${(P) ::= rather than eval.

	* 44242: Completion/Unix/Command/_chown,
	Completion/Unix/Command/_ln, Completion/Unix/Command/_mv,
	Completion/Unix/Command/_rm, Completion/Unix/Command/_rmdir:
	Use _pick_variant -b to detect builtins.

2019-04-18  Mikael Magnusson  <mikachu@gmail.com>

	* dana: 43288: Src/prompt.c: fix line-broken prompts

2019-04-12  dana  <dana@dana.is>

	* unposted: NEWS: Document recent feature additions

	* 44198: Doc/Zsh/options.yo, Src/builtin.c, Src/options.c,
	Src/zsh.h: Add cd_silent option to suppress all cd output
