@@ -1,3 +1,8 @@
+2019-05-03  dana  <dana@dana.is>
+
+	* 44267: Src/sort.c, Test/Y01completion.ztst: Restore option to
+	ignore backslashes when sorting
+
 2019-05-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* 44271: Src/loop.c, Test/A01grammar.ztst: until with positive
